--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.20",
     "pg": "^8.5.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "node": "^10.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
