--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "your name here",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "pg": "^8.5.1"
   },
